--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,8 +4,7 @@ version: 0.0.1
 homepage:
 
 environment:
-  sdk: ^3.6.0
-  flutter: ">=1.17.0"
+  sdk: ">=2.12.0 <4.0.0"  # Enable null safety
 
 dependencies:
   flutter:
